feat: Refine IR lowering and exception semantics
Refactor IR pipeline to model protected regions/handlers explicitly, centralize instruction/op semantics, and improve JVM emission with use-graph analysis, stable local allocation, and operand-stack carry handling for invoke chains.

Also fix field constant emission around <clinit> defaults, UnaryInstruction register ordering and ArrayType descriptor construction.